--- a/oaz_graphics/oaz_graphics.vcxproj.filters
+++ b/oaz_graphics/oaz_graphics.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClCompile Include="oaz_graphics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="oaz_graphics_core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="oaz_graphics_window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oaz_graphics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="oaz_graphics_window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="oaz_graphics_core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
